Increment8: Multi browser support + Migration to Java 21(phase 1).